Finally got the popover working! Remaining issue: Text overflow in courses.

--- a/ProjectPaula/src/ProjectPaula/wwwroot/css/site.css
+++ b/ProjectPaula/src/ProjectPaula/wwwroot/css/site.css
@@ -517,7 +517,6 @@ textarea {
   border-left: transparent;
 }
 #timetable .timetable-course {
-  overflow: hidden;
   text-overflow: ellipsis;
   margin-right: 5px;
   padding: 5px;
